Переделал метрики, логи, трассы
