# modules/transaction-service/src/main/java/com/advanced/transactionservice/controller/WalletRestControllerV1.java
@@ -30,9 +30,9 @@ public class WalletRestControllerV1 {
 
     @Timed
     @WithSpan
-    @GetMapping("/{walletUid}")
-    public WalletResponse getWalletByUid(@Valid @PathVariable UUID walletUid) {
-        return walletService.getWalletByUid(walletUid);
+    @GetMapping("/{walletUid}/{userUid}")
+    public WalletResponse getWalletByUid(@Valid @PathVariable UUID walletUid, @PathVariable UUID userUid) {
+        return walletService.getWalletByUid(walletUid, userUid);
     }
 
     @Timed
